# dataset-app

./: README.md  package.json
.github/workflows/: build-release.yml  trigger-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/core/: dialog_handler.rs
src-tauri/src/labelme_convert/: labelme_out.rs
