[package]
name = "dataset-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sentinelai_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
image = "0.25.4"
opencv = "0.93.3"
prettytable = "0.10.0"
rfd = { version = "0.15.0", default-features = false, features = ["xdg-portal"] }
anyhow = "1.0.90"
csv = "1.3.0"
tempfile = "3.13.0"
tauri-plugin-dialog = "2"
rand = "0.8.5"
glob = "0.3.1"
walkdir = "2.4.0"
chrono = "0.4.34"
lazy_static = "1.4.0"
imageproc = "0.25.0"
base64 = "0.22.0"
imagesize = "0.13"  # Fast image dimension reading without decoding
tokio = { version = "1", features = ["full"] }  # Async runtime
rayon = "1.10"  # Parallel processing

